...
                Scaffold.of(context).showSnackBar(SnackBar(
                    duration: Duration(seconds: snackBarDuration),
                    content: Text(
                      todoForm.isUpdatingTodoController.value
                          ? "Tarefa editada!"
                          : "Tarefa criada!",
                      key: Key("textSnackBar"),
                    )));

                await Future.delayed(
                  Duration(seconds: snackBarDuration),
                  itWasBeingRead
                      ? () => todoForm.isReadingTodo = false
...
